mooring_to_grid

--- a/unisacsi/examples.ipynb
+++ b/unisacsi/examples.ipynb
@@ -25,7 +25,20 @@
    "execution_count": 1,
    "id": "869d6f70",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'geopandas'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/_n/yxn7fbx957v03g60p_kjm5tw0000gn/T/ipykernel_95085/1403141681.py\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mOcean\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mOc\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mMeteo\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mMet\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mMET_model_download\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mdownload_MET_model_static_fields\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdownload_MET_model_data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mmpl\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Documents/GitHub/unisacsi/unisacsi/Meteo.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mxarray\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mxr\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mglob\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 21\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mgeopandas\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mgpd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     22\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mcmocean\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mcmo\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'geopandas'"
+     ]
+    }
+   ],
    "source": [
     "import Ocean as Oc\n",
     "import Meteo as Met\n",
@@ -728,26 +741,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "644f21de",
-   "metadata": {},
-   "source": [
-    "After reading the data, you should convert the matlab time stamp into Python timestamps:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "a615e63d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for key in mooring.keys():\n",
-    "    if key[:4] == \"date\":\n",
-    "        mooring[key] = Oc.mat2py_time(np.asarray(mooring[key]))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "f7201a08",
    "metadata": {},
    "source": [
@@ -778,6 +771,27 @@
     "plt.plot(mooring[\"date556\"], mooring[\"T556\"], \"b\")\n",
     "plt.ylabel('Temperature [degC]')\n",
     "plt.grid()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b252816",
+   "metadata": {},
+   "source": [
+    "You might want to look at not only one level, but at a time series of composite profiles combined from all measurements of a certain variable. For that purpose you can use the following function to grid the mooring data from one variable onto a grid defined by the last two arguments (\"1H\" = one-hourly temporal resolution, 20. = 20 m depth resolution):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99bce933",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_levels, df_gridded = mooring_to_grid(mooring, \"T\", \"1H\", 20.)\n",
+    "\n",
+    "fig, ax = plt.subplots(1,1)\n",
+    "df_gridded.plot()"
    ]
   },
   {
