changed example paths

--- a/examples.ipynb
+++ b/examples.ipynb
@@ -1697,8 +1697,8 @@
     }
    ],
    "source": [
-    "download_MET_model_static_fields(\"C:/Users/lukasf/Github/unisacsi/unisacsi/config_model_download.yml\")\n",
-    "download_MET_model_data(\"C:/Users/lukasf/Github/unisacsi/unisacsi/config_model_download.yml\")"
+    "download_MET_model_static_fields(f\"{path_data}config_model_download.yml\")\n",
+    "download_MET_model_data(f\"{path_data}config_model_download.yml\")"
    ]
   },
   {
