--- a/examples.ipynb
+++ b/examples.ipynb
@@ -27,9 +27,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import Ocean as Oc\n",
-    "import Meteo as Met\n",
-    "from MET_model_download import download_MET_model_static_fields, download_MET_model_data\n",
+    "import unisacsi.Ocean as Oc\n",
+    "import unisacsi.Meteo as Met\n",
+    "from unisacsi.MET_model_download import download_MET_model_static_fields, download_MET_model_data\n",
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
@@ -1852,7 +1852,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
