--- a/examples.ipynb
+++ b/examples.ipynb
@@ -54,7 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path_data = \"C:/Users/lukasf/Desktop/Example_data/\""
+    "path_data = \"./unisacsi_example_data/\""
    ]
   },
   {
