new example data file structure

--- a/examples.ipynb
+++ b/examples.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5cb3a2d0",
    "metadata": {},
    "source": [
     "# UNISACSI Examples\n",
@@ -12,7 +11,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2d44af9",
    "metadata": {},
    "source": [
     "## Importing packages, setting paths, ...\n",
@@ -23,7 +21,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "869d6f70",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +38,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc1f64f8",
    "metadata": {},
    "source": [
     "Then, download the folder with the example and map data and save it locally on your computer. Then, specify this location here:"
@@ -50,7 +46,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d7ce54ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +54,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95e18f72",
    "metadata": {},
    "source": [
     "Now you are ready to dive into the actual examples!"
@@ -67,7 +61,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb078d20",
    "metadata": {},
    "source": [
     "## Oceanography"
@@ -75,7 +68,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb1bf057",
    "metadata": {},
    "source": [
     "### CTD\n",
@@ -86,7 +78,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c1ec4470",
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +124,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "261ed65e",
    "metadata": {},
    "source": [
     "As you now know which arguments the function expects, you can use it:"
@@ -142,7 +132,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f1062c2b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +140,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "945f4ebb",
    "metadata": {},
    "source": [
     "CTD is a dictionary with one entry per station. Therefore, the keys of CTD are the station numbers:"
@@ -160,7 +148,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "0093b457",
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +164,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dad80f3a",
    "metadata": {},
    "source": [
     "Each station is again a dictionary with the variables as keys. Therefore, you can check the list of variables for one particular station using:"
@@ -186,7 +172,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "afea5d9f",
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +188,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d1b6fe7",
    "metadata": {},
    "source": [
     "In order to define a certain section, e.g. the along-fjord section in Isfjorden or Storfjorden, create a list with the corresponding station numbers (in the correct order):"
@@ -212,7 +196,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "dd2a5807",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +204,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32892c8d",
    "metadata": {},
    "source": [
     "Now you can plot e.g. the density profiles from all stations in the Storfjorden section using the following bit of code:"
@@ -230,7 +212,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "bb0d88c9",
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +250,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35197e66",
    "metadata": {},
    "source": [
     "For many purposes, having the data stored in nested dictionaries is not very practical. There is two ways of how to re-order the data. You can either convert the data from a single station into a pandas dataframe, with the depth as the index and the variables as columns..."
@@ -278,7 +258,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a934a303",
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +332,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f9c8ade",
    "metadata": {},
    "source": [
     "... or you can save the measurements of one particular variable from several stations into a dataframe, again with the depth s index, but the columns now represent the individual stations:"
@@ -362,7 +340,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "bd72342d",
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +384,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43c7e263",
    "metadata": {},
    "source": [
     "You might want to have a look at a map to see, where the stations are located."
@@ -416,7 +392,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "222a7fe2",
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +429,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c339c8ab",
    "metadata": {},
    "source": [
     "Like this, the map is not very helpful. Let's focus on the Storfjorden section again:"
@@ -463,7 +437,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "cd610534",
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +467,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86756402",
    "metadata": {},
    "source": [
     "Much better! Are you wondering how the temperature along this section looks like?"
@@ -503,7 +475,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "d74b1f8c",
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +510,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f2b93ae",
    "metadata": {},
    "source": [
     "If you are not a fan of the interpolation, you can simply change the corrspeonding argument in the function call (Check the documentation using the help function!):"
@@ -548,7 +518,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "6b80b7d8",
    "metadata": {},
    "outputs": [
     {
@@ -584,7 +553,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d6fef3d",
    "metadata": {},
    "source": [
     "Finally, T-S diagrams are very useful to investigate e.g. the origin and interaction of water masses. A quick way to plot a T-S diagram of all stations in the Storfjorden section is the following function:"
@@ -593,7 +561,6 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "e3c90ae3",
    "metadata": {},
    "outputs": [
     {
@@ -616,7 +583,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "379eaba4",
    "metadata": {},
    "source": [
     "If you want to adjust the plot to your individual needs, you can simply create an empty T-S diagram first, and then add the data manually. Instead of coloring the dots according to the station they were measured at, you can color them according to e.g. oxygen content instead:"
@@ -625,7 +591,6 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "da1acc9f",
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +629,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bba1b205",
    "metadata": {},
    "source": [
     "### Mooring\n",
@@ -674,7 +638,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a386f643",
    "metadata": {},
    "source": [
     "The function to read the data again stores it in a dictionary. Let's have a look:"
@@ -683,7 +646,6 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "e6122548",
    "metadata": {},
    "outputs": [
     {
@@ -695,14 +657,13 @@
     }
    ],
    "source": [
-    "mooring = Oc.read_mooring(f\"{path_data}IS1617.mat\")\n",
+    "mooring = Oc.read_mooring(f\"{path_data}Mooring/IS1617.mat\")\n",
     "\n",
     "print(mooring.keys())"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "420380aa",
    "metadata": {},
    "source": [
     "Some entries are self-explanatory, just have a look yourself, e.g.:"
@@ -711,7 +672,6 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "51627305",
    "metadata": {},
    "outputs": [
     {
@@ -728,7 +688,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7201a08",
    "metadata": {},
    "source": [
     "For all dict entry names, which are a combination of letters and numbers: The number is the serial number of the individual sensor, you can figure out the type of each sensor by having a look at the \"sensor\"-entry. The letters before the number indicate the type of the variable: T = temperature, S = salinity, C = conductivity, P = pressure, O = oxygen, U,V,W = velocity components, md = measurement depth and data = the time array for the respective sensor. With that knowledge, you can now plot e.g. a timeseries of temperature:"
@@ -737,7 +696,6 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "050ec786",
    "metadata": {},
    "outputs": [
     {
@@ -762,7 +720,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b252816",
    "metadata": {},
    "source": [
     "You might want to look at not only one level, but at a time series of composite profiles combined from all measurements of a certain variable. For that purpose you can use the following function to grid the mooring data from one variable onto a grid defined by the last two arguments (\"1H\" = one-hourly temporal resolution, 20. = 20 m depth resolution):"
@@ -771,7 +728,6 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "99bce933",
    "metadata": {},
    "outputs": [
     {
@@ -810,7 +766,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b0121ff",
    "metadata": {},
    "source": [
     "### ADCP\n",
@@ -821,16 +776,14 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "03b7ce4d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "adcp = Oc.read_ADCP_UNIS(f\"{path_data}os75bb_long.nc\")"
+    "adcp = Oc.read_ADCP_UNIS(f\"{path_data}ADCP/os75bb_long.nc\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b94cd3a9",
    "metadata": {},
    "source": [
     "It might be neccessary to limit the time period to a certain section:"
@@ -839,7 +792,6 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "d2cadfec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -855,7 +807,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1bf917c8",
    "metadata": {},
    "source": [
     "Now you can the section on a map:"
@@ -864,7 +815,6 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "08899c53",
    "metadata": {},
    "outputs": [
     {
@@ -923,7 +873,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28015542",
    "metadata": {},
    "source": [
     "Alternatively, you can plot the cross section with the velocities color-coded:"
@@ -932,7 +881,6 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "7f910d7b",
    "metadata": {},
    "outputs": [
     {
@@ -979,7 +927,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e594fec",
    "metadata": {},
    "source": [
     "## Meteorology"
@@ -987,7 +934,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5007b6a",
    "metadata": {},
    "source": [
     "### Download AROME-Arctic model data\n",
@@ -998,7 +944,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5ca3553",
    "metadata": {},
    "outputs": [
     {
@@ -1333,13 +1278,12 @@
     }
    ],
    "source": [
-    "download_MET_model_static_fields(f\"{path_data}config_model_download.yml\")\n",
-    "download_MET_model_data(f\"{path_data}config_model_download.yml\")"
+    "download_MET_model_static_fields(f\"{path_data}AROME_ARCTIC/config_model_download.yml\")\n",
+    "download_MET_model_data(f\"{path_data}AROME_ARCTIC/config_model_download.yml\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a26e22d8",
    "metadata": {},
    "source": [
     "### Time series plots\n",
@@ -1350,12 +1294,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce6c1540",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Radiation\n",
-    "df_rad = Met.read_Campbell_radiation(f\"{path_data}TOA5_19688.rad_2022_02_11_1145.dat\")\n",
+    "df_rad = Met.read_Campbell_radiation(f\"{path_data}Radiation_SEB/TOA5_19688.rad_2022_02_11_1145.dat\")\n",
     "    \n",
     "fig, ax = plt.subplots(1,1)\n",
     "with pd.plotting.plot_params.use('x_compat', True):\n",
@@ -1400,7 +1343,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1067dea5",
    "metadata": {},
    "source": [
     "Besides time series plots, you might want to plot data on a map. Examples are model data from AROME-Arctic or IWIN measurements from the boats on Isfjorden. The Meteo module provides a set of functions to create different kinds of maps, please check the docs and decide, which type might be suited best for your specific plot. An example:"
@@ -1409,7 +1351,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ee125a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1426,7 +1367,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1440,7 +1381,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
