--- a/examples.ipynb
+++ b/examples.ipynb
@@ -424,7 +424,7 @@
    ],
    "source": [
     "plt.figure()\n",
-    "Oc.plot_CTD_map(CTD, extent=[7.,25.,75.5,80.], topography=f\"{path_data}Svalbard_map_data\bathymetry_svalbard.mat\")"
+    "Oc.plot_CTD_map(CTD, extent=[7.,25.,75.5,80.], topography=f\"{path_data}Svalbard_map_data/bathymetry_svalbard.mat\")"
    ]
   },
   {
@@ -461,7 +461,7 @@
    ],
    "source": [
     "plt.figure()\n",
-    "Oc.plot_CTD_map(CTD, extent=[16.,23.,76.,79.], stations=storfjorden_section, topography=f\"{path_data}Svalbard_map_data\bathymetry_svalbard.mat\",\n",
+    "Oc.plot_CTD_map(CTD, extent=[16.,23.,76.,79.], stations=storfjorden_section, topography=f\"{path_data}Svalbard_map_data/bathymetry_svalbard.mat\",\n",
     "                adjust_text=True)"
    ]
   },
@@ -851,7 +851,7 @@
     "data_proj = ccrs.PlateCarree()\n",
     "plt.figure(figsize=(9,9))\n",
     "\n",
-    "ax = Oc.plot_empty_map(extent=[7.,25.,75.5,80.], topography=f\"{path_data}Svalbard_map_data\bathymetry_svalbard.mat\");\n",
+    "ax = Oc.plot_empty_map(extent=[7.,25.,75.5,80.], topography=f\"{path_data}Svalbard_map_data/bathymetry_svalbard.mat\");\n",
     "\n",
     "# First plot the shiptrack\n",
     "ax.plot(lon,lat,transform=data_proj, color='b')\n",
