--- a/examples.ipynb
+++ b/examples.ipynb
@@ -1314,9 +1314,9 @@
     "\n",
     "\n",
     "# TinyTags\n",
-    "df_TT = Met.read_Tinytag(f\"{path_data}20220318_TT4.txt\", \"TT\")\n",
-    "df_TH = Met.read_Tinytag(f\"{path_data}20220318_TH3.txt\", \"TH\")\n",
-    "df_CEB = Met.read_Tinytag(f\"{path_data}20210911_CEB1.txt\", \"CEB\")\n",
+    "df_TT = Met.read_Tinytag(f\"{path_data}TinyTags/20220318_TT4.txt\", \"TT\")\n",
+    "df_TH = Met.read_Tinytag(f\"{path_data}TinyTags/20220318_TH3.txt\", \"TH\")\n",
+    "df_CEB = Met.read_Tinytag(f\"{path_data}TinyTags/20210911_CEB1.txt\", \"CEB\")\n",
     "\n",
     "fig, (ax_T, ax_CEB) = plt.subplots(2,1)\n",
     "ax_RH = ax_T.twinx()\n",
@@ -1354,7 +1354,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "aa = Met.read_AROME(f\"{path_data}Arome_Arctic/AA_nearsurface_*.nc\")\n",
+    "aa = Met.read_AROME(f\"{path_data}AROME_ARCTIC/AA_nearsurface_*.nc\")\n",
     "    \n",
     "fig, ax = Met.initialize_empty_map(lat_limits=[78., 79.], lon_limits=[13., 18.])\n",
     "fig, ax = Met.map_add_coastline(fig, ax, option=1, color=\"k\", lat_limits=[78., 79.], lon_limits=[13., 18.], path_mapdata=f\"{path_data}Svalbard_map_data/\")\n",
