added spectral analysis exercise

--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -238,6 +238,16 @@
     "\n",
     "For most of the instruments you will use in the field, there are functions to read the data available in the unisacsi toolbox. However, it is essential that you are able to read and handle such data yourself. Practice developing a routine to read data from a text file by reading the radiation example data yourself (instead of using the respective function from the toolbox.)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd562db7",
+   "metadata": {},
+   "source": [
+    "### 18. Spectral Analysis\n",
+    "\n",
+    "Read the mooring time series from the SeaGuard serial number 2306. First, plot a time series of pressure. What is the problem with the data? Fix it and plot the time series again. Can you see a prominent periodicity in the series? You might need to zoom into the plot or plot a shorter period. Using the scipy and spectrum packages (check the documentations for hints which functions to use!), plot a periodogram of the detrended (find the corresponding function from the scipy-package) time series! Can you recognize the frequency peak you identified in the time series? What are the other peaks? Use multitapering to smooth the periodogram and plot a more meaningful power spectrum."
+   ]
   }
  ],
  "metadata": {
