--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -39,7 +39,9 @@
     "import cmocean as cmo\n",
     "import windrose\n",
     "import xarray as xr\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "import spectrum\n",
+    "from scipy import signal"
    ]
   },
   {
