--- a/examples.ipynb
+++ b/examples.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "96c84edb",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "f3310b32",
    "metadata": {},
    "outputs": [],
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "cc4d6c02",
    "metadata": {},
    "outputs": [],
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "94bcd279",
    "metadata": {},
    "outputs": [
@@ -173,6 +173,24 @@
    ],
    "source": [
     "print(CTD.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "5b5c4c4e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Feb 19 2002  11:15:51\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(CTD[3][\"gps_datetime\"])"
    ]
   },
   {
@@ -788,12 +806,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "fecc230b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/lukasf/OneDrive - Universitetssenteret på Svalbard AS/unisacsi_example_data/ADCP/os75bb_long.nc\n"
+     ]
+    }
+   ],
    "source": [
-    "adcp = Oc.read_ADCP_UNIS(f\"{path_data}ADCP/os75bb_long.nc\")"
+    "adcp = Oc.read_ADCP_UNIS(f\"{path_data}ADCP/os75bb_long.nc\")\n",
+    "print(f\"{path_data}ADCP/os75bb_long.nc\")"
    ]
   },
   {
@@ -1160,7 +1187,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.8.15"
   }
  },
  "nbformat": 4,
