--- a/examples.ipynb
+++ b/examples.ipynb
@@ -22,10 +22,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "96c84edb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'split_ADCP_resolution' from 'unisacsi.Ocean' (/Users/lukasf/Documents/GitHub/unisacsi/unisacsi/Ocean.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01munisacsi\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mOcean\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mOc\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01munisacsi\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mMeteo\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mMet\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01munisacsi\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mMET_model_download\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m download_MET_model_static_fields, download_MET_model_data\n",
+      "File \u001b[0;32m~/Documents/GitHub/unisacsi/unisacsi/__init__.py:30\u001b[0m\n\u001b[1;32m      2\u001b[0m __authors__ \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mLukas Frank <lukasf@unis.no\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mJakob Dörr <jakob.dorr@uib.no\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mMeteo\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[1;32m      5\u001b[0m \tread_MET_AWS,\n\u001b[1;32m      6\u001b[0m \tread_Campbell_AWS,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     27\u001b[0m \tmap_add_wind_arrows\n\u001b[1;32m     28\u001b[0m )\n\u001b[0;32m---> 30\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mOcean\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[1;32m     31\u001b[0m \tcal_dist_dir_on_sphere,\n\u001b[1;32m     32\u001b[0m \tcart2pol,\n\u001b[1;32m     33\u001b[0m \tpol2cart,\n\u001b[1;32m     34\u001b[0m \tcreate_latlon_text,\n\u001b[1;32m     35\u001b[0m \tCTD_to_grid,\n\u001b[1;32m     36\u001b[0m \tmooring_to_grid,\n\u001b[1;32m     37\u001b[0m \tcalc_freshwater_content,\n\u001b[1;32m     38\u001b[0m \tmyloadmat,\n\u001b[1;32m     39\u001b[0m \tmat2py_time,\n\u001b[1;32m     40\u001b[0m \tpresent_dict,\n\u001b[1;32m     41\u001b[0m \tread_ADCP_CODAS,\n\u001b[1;32m     42\u001b[0m     split_ADCP_resolution,\n\u001b[1;32m     43\u001b[0m     read_WinADCP,\n\u001b[1;32m     44\u001b[0m \tread_CTD,\n\u001b[1;32m     45\u001b[0m \tread_CTD_from_mat,\n\u001b[1;32m     46\u001b[0m \tread_mini_CTD,\n\u001b[1;32m     47\u001b[0m \tread_MSS,\n\u001b[1;32m     48\u001b[0m \tread_mooring_from_mat,\n\u001b[1;32m     49\u001b[0m \tread_mooring,\n\u001b[1;32m     50\u001b[0m \tcontour_section,\n\u001b[1;32m     51\u001b[0m \tplot_CTD_section,\n\u001b[1;32m     52\u001b[0m \tplot_CTD_single_section,\n\u001b[1;32m     53\u001b[0m \tplot_CTD_station,\n\u001b[1;32m     54\u001b[0m \tplot_CTD_map,\n\u001b[1;32m     55\u001b[0m \tplot_empty_map,\n\u001b[1;32m     56\u001b[0m \tplot_CTD_ts,\n\u001b[1;32m     57\u001b[0m \tcreate_empty_ts,\n\u001b[1;32m     58\u001b[0m \tplot_ADCP_CTD_section\n\u001b[1;32m     59\u001b[0m )\n\u001b[1;32m     61\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mMET_model_download\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m download_MET_model_data, download_MET_model_static_fields, MET_model_download_class\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'split_ADCP_resolution' from 'unisacsi.Ocean' (/Users/lukasf/Documents/GitHub/unisacsi/unisacsi/Ocean.py)"
+     ]
+    }
+   ],
    "source": [
     "import unisacsi.Ocean as Oc\n",
     "import unisacsi.Meteo as Met\n",
@@ -49,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "f3310b32",
    "metadata": {},
    "outputs": [],
@@ -85,48 +98,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "8e981f2d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on function read_CTD in module unisacsi.Ocean:\n",
-      "\n",
-      "read_CTD(inpath, cruise_name='cruise', outpath=None, stations=None, salt_corr=(1.0, 0.0), oxy_corr=(1.0, 0.0))\n",
-      "    This function reads in the CTD data from cnv files in `inpath`\n",
-      "    for the stations `stations` and returns a list of dicts containing\n",
-      "    the data. Conductivity correction (if any) can be specified in `corr`\n",
-      "    Parameters\n",
-      "    ----------\n",
-      "    inpath : str\n",
-      "        Either the path to a folder where the cnv files are stored, or the path\n",
-      "        to a .npy file with the data. In the latter case, NO correction can be\n",
-      "        applied.\n",
-      "    cruise_name : str, optional\n",
-      "        name of the cruise. The default is 'cruise'\n",
-      "    outpath : str, optional\n",
-      "        path where to store the output. The default is None.\n",
-      "    stations : array_like, optional\n",
-      "        list of stations to read in (optional). If not given,\n",
-      "        the function will read all stations in `inpath`. The default is None.\n",
-      "    salt_corr : tuple, optional\n",
-      "        tuple with 2 values containing (slope,intersect) of\n",
-      "                      linear correction model. The default is (1.,0.).\n",
-      "    oxy_corr : tuple, optional\n",
-      "        tuple with 2 values containing (slope,intersect) of\n",
-      "                      linear correction model. The default is (1.,0.).\n",
-      "    Returns\n",
-      "    -------\n",
-      "    CTD_dict : dict\n",
-      "        a dict of dicts containing the data for\n",
-      "                    all the relevant station data.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "help(Oc.read_CTD)"
    ]
@@ -1216,7 +1191,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
