Changed examples.ipynb adapted to the changes in unisacsi.Meteo

--- a/examples.ipynb
+++ b/examples.ipynb
@@ -1758,7 +1758,9 @@
    "source": [
     "### Download AROME-Arctic model data\n",
     "\n",
-    "You can download model data from AROME-Arctic using the following functions. The configurations are set in an extra configuration file (also provided on github)"
+    "You can download model data from AROME-Arctic using the following functions. The configurations are set in an extra configuration file (also provided on github)\n",
+    "\n",
+    "Create the static fields first and then download the data."
    ]
   },
   {
@@ -1871,7 +1873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "id": "58cbb863",
    "metadata": {},
    "outputs": [
@@ -1958,10 +1960,10 @@
     "\n",
     "fig, (ax_T, ax_CEB) = plt.subplots(2,1)\n",
     "ax_RH = ax_T.twinx()\n",
-    "df_TT.plot(y=\"T_black_degC\", ax=ax_T, c=\"darkblue\")\n",
-    "df_TT.plot(y=\"T_white_degC\", ax=ax_T, c=\"lightblue\")\n",
-    "df_TH.plot(y=\"T_degC\", ax=ax_T, c=\"b\")\n",
-    "df_TH.plot(y=\"RH_%RH\", ax=ax_RH, c=\"r\")\n",
+    "df_TT.plot(y=\"T_black [degC]\", ax=ax_T, c=\"darkblue\")\n",
+    "df_TT.plot(y=\"T_white [degC]\", ax=ax_T, c=\"lightblue\")\n",
+    "df_TH.plot(y=\"T [degC]\", ax=ax_T, c=\"b\")\n",
+    "df_TH.plot(y=\"RH [%RH]\", ax=ax_RH, c=\"r\")\n",
     "ax_T.set_xlabel(None)\n",
     "ax_T.set_ylabel(\"temperature [degC]\", c=\"b\")\n",
     "ax_RH.set_ylabel(\"relative humidity [%]\", c=\"r\")\n",
@@ -1973,7 +1975,7 @@
     "ax_T.legend(loc=\"lower right\")\n",
     "ax_RH.legend(loc=\"upper left\")\n",
     "\n",
-    "df_CEB.plot(y=\"T_degC\", ax=ax_CEB, c=\"g\")\n",
+    "df_CEB.plot(y=\"T [degC]\", ax=ax_CEB, c=\"g\")\n",
     "ax_CEB.set_xlabel(None)\n",
     "ax_CEB.set_ylabel(\"soil temperature [degC]\")\n",
     "ax_CEB.grid()"
@@ -1989,7 +1991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "id": "8183953d",
    "metadata": {},
    "outputs": [
@@ -2017,10 +2019,11 @@
    "source": [
     "aa = Met.read_AROME(f\"{path_data}AROME_ARCTIC/AA_nearsurface_2p5km_20220503.nc\")\n",
     "    \n",
-    "fig, ax = Met.initialize_empty_map(lat_limits=[78., 79.], lon_limits=[13., 18.])\n",
-    "fig, ax = Met.map_add_coastline(fig, ax, option=1, color=\"k\", lat_limits=[78., 79.], lon_limits=[13., 18.], path_mapdata=f\"{path_data}Svalbard_map_data/\")\n",
+    "IsfjordMap = Met.MapGenerator([78., 79.],[13., 18.],subplots_parameters={\"figsize\":(12,12)}).add_coastline(1,\"k\",path_mapdata=f\"{path_data}Svalbard_map_data/\")\n",
     "\n",
-    "pic = ax.contourf(aa.longitude, aa.latitude, aa.air_temperature_2m.sel(time=\"2022-05-03 12:00:00\")-273.15, levels=100, cmap=cmo.cm.thermal, transform=ccrs.PlateCarree())\n",
+    "ax=IsfjordMap.get_ax()[0]\n",
+    "\n",
+    "pic = ax.contourf(aa.longitude, aa.latitude, aa.T_air_2m.sel(time=\"2022-05-03 12:00:00\")-273.15, levels=100, cmap=cmo.cm.thermal, transform=ccrs.PlateCarree())\n",
     "cbar = plt.colorbar(pic, ax=ax)\n",
     "cbar.ax.set_ylabel(\"2m temperature\")"
    ]
