Uptaded to Ocean uptade

--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -54,12 +54,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "afd27872",
    "metadata": {},
    "outputs": [],
    "source": [
-    "path_data = \"/Users/lukasf/OneDrive - Universitetssenteret på Svalbard AS/unisacsi_example_data/\""
+    "path_data = \"/Users/pselle/Documents/Uni/Svalbard/Internship/UNISacis/data/\""
    ]
   },
   {
@@ -77,7 +77,7 @@
    "source": [
     "### 1. CTD profiles\n",
     "\n",
-    "Some of the data you have gotten is CTD profiles from the AGF-214 cruise 2021. Read all profiles using the unisacsi-toolbox. Explore the dataset. In what type of variable are the profiles stored? Which sub-levels are there? Compare the temperature and salinity profiles from stations 3 and 23!"
+    "Some of the data you have gotten is CTD profiles from the AGF-214 cruise 2024. Read all profiles using the unisacsi-toolbox. Explore the dataset. In what type of variable are the profiles stored? Which sub-levels are there? Compare the temperature and salinity profiles from stations 3 and 23!"
    ]
   },
   {
