--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -22,13 +22,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "0f7245e2",
    "metadata": {},
    "outputs": [],
    "source": [
     "import unisacsi.Ocean as Oc\n",
     "import unisacsi.Meteo as Met\n",
+    "import unisacsi.universal_func as uf\n",
     "from unisacsi.MET_model_download import download_MET_model_static_fields, download_MET_model_data\n",
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
@@ -59,7 +60,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path_data = \"/Users/pselle/Documents/Uni/Svalbard/Internship/UNISacis/data/\""
+    "path_data = \"/Users/pselle/Documents/Uni/Svalbard/Internship/UNISacis/Data/unisacsi_example_data\"\n",
+    "import os"
    ]
   },
   {
@@ -107,8 +109,9 @@
    "source": [
     "### 4. T-S Diagrams\n",
     "\n",
-    "A TS-diagram is an axis system with salinity on the x-axis and temperature on the y-axis. Since density depends mainly on temperature and salinity, a TS-diagram also gives background contours showing the density of water at any given point in this coordinate system. Pressure also affects density but is a chosen constant for the TS-plot. T-S diagrams are very useful to investigate e.g. the origin and interaction of water masses. Plot a \"normal\" T-S diagram of all stations in the Billefjorden section (one color for one station, use the respective toolbox-function). What do the density lines tell you about the properties of dense and light water masses? \n",
-    "Which property determines the density most in cold waters? Plot the same T-S diagram again, but now with the Oxygen measurements color-coded."
+    "A TS-diagram is an axis system with salinity on the x-axis and temperature on the y-axis. Since density depends mainly on temperature and salinity, a TS-diagram also gives background contours showing the density of water at any given point in this coordinate system. Pressure also affects density but is a chosen constant for the TS-plot. T-S diagrams are very useful to investigate e.g. the origin and interaction of water masses. Plot a \"normal\" T-S diagram of all stations in the Billefjorden section (one color for one station, use the respective toolbox-function). What do the density lines tell you about the properties of dense and light water masses? Add the different water types in the plot as well. Which property determines the density most in cold waters? \n",
+    "\n",
+    "Plot the same T-S diagram again, but now with the Oxygen measurements color-coded."
    ]
   },
   {
@@ -118,7 +121,7 @@
    "source": [
     "### 5. Wind Measurements\n",
     "\n",
-    "The Campbell AWS (Automatic Weather Station) measures wind speed and direction. You can find example data files in the respective folder. Read the data! Why are there two different files for the same period?"
+    "The Campbell AWS (Automatic Weather Station) measures wind speed and direction. You can find example data files in the respective folder. Read the data! This is also the part, where you can get familiar with UNIX-style wildcards to read in all the data files."
    ]
   },
   {
@@ -178,7 +181,7 @@
    "source": [
     "### 11. Combine time series data\n",
     "\n",
-    "Even though the temperature/humidity and wind measurements are initially sampled at different frequencies and read separately, it might be useful to combine them into one Dataframe. Find the respective pandas function and create a new dataframe with all measurements from 2022-09-14 as individual columns. How does the function handle the gaps in the temperature time series with respect to the wind measurements? Interpolate the temperature measurements onto the high temporal resolution."
+    "To check if there is a correlation between wind direction and temperature difference, it's useful to combine the time series data into one DataFrame. Use the data from Caroline and the timeframe \"2024-08-31 10:00:00\" to \"2024-09-01 10:00:00\". Do a scatter plot of the wind direction against the temperature difference (between the T_1 sensor and the sensor from Caroline sensors). What problem do you encounter? How can you solve it?"
    ]
   },
   {
@@ -248,7 +251,7 @@
    "source": [
     "### 18. Spectral Analysis\n",
     "\n",
-    "Read the mooring time series from the SeaGuard serial number 2306. First, plot a time series of pressure. What is the problem with the data? Fix it and plot the time series again. Can you see a prominent periodicity in the series? You might need to zoom into the plot or plot a shorter period. Using the scipy and spectrum packages (check the documentations for hints which functions to use!), plot a periodogram of the detrended (find the corresponding function from the scipy-package) time series! Can you recognize the frequency peak you identified in the time series? What are the other peaks? Use multitapering to smooth the periodogram and plot a more meaningful power spectrum."
+    "Read the mooring time series from the SeaGuard serial number 2375. First, plot a time series of pressure. What is the problem with the data? Fix it and plot the time series again. Can you see a prominent periodicity in the series? You might need to zoom into the plot or plot a shorter period. Using the scipy and spectrum packages (check the documentations for hints which functions to use!), plot a periodogram of the detrended (find the corresponding function from the scipy-package) time series! Can you recognize the frequency peak you identified in the time series? What are the other peaks? Use multitapering to smooth the periodogram and plot a more meaningful power spectrum."
    ]
   }
  ],
